--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <head>
   <!-- Link your CSS stylesheet -->
   <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@400;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
   <link href="index.css" rel="stylesheet">
 </head>
 
@@ -24,14 +23,14 @@
     </div>
     <div class="text">
         <h1>Yosemite Park Guide</h1>
-        <h2>Come explore California’s beautiful wilderness.</h2>
+        <h2>Come explore California’s beautiful wilderness.</h2><br>
         <p>Always open. Reservations are not available or required to enter the park.</p>
     </div>
   </section>
   <section id="main">
     <div class="color">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the
-        persistence of life, and the tranquility of the High Sierra.</p>
+        persistence of life, and the tranquility of the High Sierra.</p><br>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200
         square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much
         more.
